[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Aero.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/background.jpg" type="Texture" id=3]
[ext_resource path="res://Main.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 511.747, 18.6757 )

[sub_resource type="DynamicFont" id=1]
size = 29
font_data = ExtResource( 1 )

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -13.0
margin_top = -16.0
margin_right = 1058.0
margin_bottom = 642.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="DeathArea"]
position = Vector2( 513.074, 643.044 )
shape = SubResource( 2 )

[node name="SpawnContainer" type="Node" parent="."]

[node name="spawn1" type="Position2D" parent="SpawnContainer"]
position = Vector2( 367.701, -0.659271 )

[node name="spawn2" type="Position2D" parent="SpawnContainer"]
position = Vector2( 521.885, 0.90834 )

[node name="spawn3" type="Position2D" parent="SpawnContainer"]
position = Vector2( 657.371, -0.589005 )

[node name="spawn4" type="Position2D" parent="SpawnContainer"]
position = Vector2( 772.209, 0.0920715 )

[node name="spawn5" type="Position2D" parent="SpawnContainer"]
position = Vector2( 888.16, 0.41098 )

[node name="EnemyContainer" type="Node" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="DifficultyTimer" type="Timer" parent="."]
autostart = true

[node name="MatchInformation" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="MatchInformation"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 30.0
margin_right = -734.0
margin_bottom = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopRow" type="HBoxContainer" parent="MatchInformation/VBoxContainer"]
margin_right = 290.0
margin_bottom = 25.0

[node name="DifficultyLabel" type="Label" parent="MatchInformation/VBoxContainer/TopRow"]
margin_right = 163.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "Difficulty : "

[node name="DiffucultyValue" type="Label" parent="MatchInformation/VBoxContainer/TopRow"]
margin_left = 167.0
margin_right = 187.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="MidRow" type="HBoxContainer" parent="MatchInformation/VBoxContainer"]
margin_top = 29.0
margin_right = 290.0
margin_bottom = 54.0

[node name="ScoreLabel" type="Label" parent="MatchInformation/VBoxContainer/MidRow"]
margin_right = 92.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "Score:"

[node name="Mid2Row" type="HBoxContainer" parent="MatchInformation/VBoxContainer"]
margin_top = 58.0
margin_right = 290.0
margin_bottom = 83.0

[node name="PlayerNameLabel" type="Label" parent="MatchInformation/VBoxContainer/Mid2Row"]
margin_right = 69.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "You: "

[node name="PlayerScoreValue" type="Label" parent="MatchInformation/VBoxContainer/Mid2Row"]
margin_left = 73.0
margin_right = 93.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="BotRow" type="HBoxContainer" parent="MatchInformation/VBoxContainer"]
margin_top = 87.0
margin_right = 290.0
margin_bottom = 112.0

[node name="EnemyNameLabel" type="Label" parent="MatchInformation/VBoxContainer/BotRow"]
margin_right = 112.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "Enemy: "

[node name="EnemyScoreValue" type="Label" parent="MatchInformation/VBoxContainer/BotRow"]
margin_left = 116.0
margin_right = 136.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "0"
[connection signal="body_entered" from="DeathArea" to="." method="_on_DeathArea_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_DifficultyTimer_timeout"]
